ENT-10338 - cleanup